IO should send SUCCESSIVE addr.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ install(DIRECTORY emp-ot DESTINATION include/)
 
 ENABLE_TESTING()
 ADD_SUBDIRECTORY(test)
+add_compile_options(-fsanitize=address)
