--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_compile_options(-fsanitize=address)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-add_link_options(-fsanitize=address)
+# add_compile_options(-fsanitize=address)
+# set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+# add_link_options(-fsanitize=address)
 
 #Testing macro
 macro (add_test_executable_with_lib _name libs)
