--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,7 +20,7 @@ macro (add_test_case_with_run _name)
 endmacro()
 
 # Test cases
-add_test_case_with_run(ot)
-add_test_case_with_run(ferret)
-add_test_case(bench_lpn)
+# add_test_case_with_run(ot)
+# add_test_case_with_run(ferret)
+# add_test_case(bench_lpn)
 add_test_case(saber)
